<resources>
    <string name="app_name">"Beer Butler "</string>
    <string name="name_hint">Enter a User Name</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="log_in_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="error">Error</string>
    <string name="create_password_hint">Create a Password</string>
    <string name="verify_password_hint">Verify Password</string>
    <string name="userName">User Key</string>
    <string name="message">Message</string>
    <string name="password">Password Key</string>
    <string name="image_description">Image</string>
    <string name="beer_list_button">Beer List</string>
    <string name="brew_tour_button">Brew Tour</string>
    <string name="user_profile_button">User Profile</string>
    <string name="text_view_brewery">Brewery: </string>
    <string name="text_view_hours">Hours: </string>
    <string name="text_view_distance">Distance: </string>
    <string name="add_beer">Search</string>
    <string name="remember_me">Remember me</string>
    <string name="login_prefs">loginPrefs</string>
    <string name="save_login">saveLogin</string>
    <string name="usernamePrefs">username</string>
    <string name="log_out">Log out</string>
    <string name="add_some_beers">Your list is empty. Add some beers!</string>

    <string name="radius">Here are all the breweries within a 10 mile radius.</string>
    <string name="nav">Nav</string>
    <string name="register_new_user">Register New User</string>

    <string name="rate">Enter a rating between 0 and 5</string>
    <string name="notes">Enter some notes.</string>
    <string name="submit">Submit</string>
    <string name="Add_beer_hint">Search for a beer to add to your list</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="brewery_street_address">Address: </string>
    <string name="description_key">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps_network_not_enabled">This app requires location settings to be enabled. Please enable locations for this device.</string>
</resources>
