<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAle"
    android:orientation="vertical"
    tools:context="group10.tcss450.uw.edu.challengeapp.BeerList.RateBeerFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:padding="10dp"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rate"
                android:id="@+id/rateBeerET"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/notesET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:layout_below="@+id/rateBeerET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/button_background"
        android:layout_margin="10dp"/>

</LinearLayout>
