<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group10.tcss450.uw.edu.challengeapp.LoginSelectionFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/beer"
        android:layout_marginEnd="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/image_description" />

    <ImageView
        android:background="@drawable/motto"
        android:layout_width="200dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton1"
        android:id="@+id/imageView2"
        android:contentDescription="@string/image_description"/>

    <Button
        android:id="@+id/signInButton1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="goToSignIn"
        android:shadowColor="#0C0B1F"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/sign_in_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/registerButton1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:onClick="goToRegister"
        android:shadowColor="#0C0B1F"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
